# CtagsSourceNavigator

./: .gitignore  .travis.yml  CMakeLists.txt  README-rus.md  README.md  version.cmake
.github/workflows/: pull_request.yaml  stable.yaml  stable_branch.yaml
Far/plugin_sdk/: plugin.hpp
appveyor/: appveyor.yml  build.bat  test.bat
build_script/: run.bat  version.bat
build_script/get_build_number/: CMakeLists.txt  main.cpp
far_plugin/: CMakeLists.txt
far_plugin/config/: tagseng.lng
far_plugin/facade/: CMakeLists.txt
far_plugin/facade/far2l/: CMakeLists.txt
far_plugin/facade/far3/: CMakeLists.txt
far_plugin/facade/far3/include/far3/: break_keys.h  config_menu.h  config_stream_reader.h  config_stream_writer.h  config_value_dialog.h  current_editor_impl.h  error.h  guid.h  help.h  text.h  wide_string.h
far_plugin/facade/far3/include/far3/plugin_sdk/: api.h
far_plugin/facade/far3/src/: break_keys.cpp  callbacks.cpp  callbacks.h  config_menu.cpp  config_stream_reader.cpp  config_stream_writer.cpp  config_value_dialog.cpp  current_editor_impl.cpp  current_editor_impl.h  dialog.cpp  exported_calls.cpp  exported_calls.def  guid.cpp  menu.cpp  message.cpp  plugin.cpp  resource.h  resource.rc  string.cpp  string.h  tagseng.hlf.in  tagseng.lng  text.h  wide_string.cpp
far_plugin/facade/include/facade/: dialog.h  menu.h  message.h  plugin.h  safe_call.h
far_plugin/facade/src/: safe_call.h
far_plugin/hotkeys/: ctags_hotkeys.lua
far_plugin/include/plugin/: config.h  config_data_mapper.h  current_editor.h  editor_history.h  navigator.h
far_plugin/platform/: CMakeLists.txt
far_plugin/platform/include/platform/: path.h  process.h  string.h
far_plugin/platform/src/: path.cpp
far_plugin/platform/src/lx/: path.cpp  platform_internal.h  process.cpp
far_plugin/platform/src/win/: path.cpp  platform_internal.h  process.cpp  string.cpp
far_plugin/src/: action_menu.cpp  action_menu.h  composite_task.cpp  composite_task.h  config.cpp  config.h  config_data_mapper.cpp  editor_history.cpp  execute_process_task.cpp  execute_process_task.h  navigator.cpp  plugin.cpp  run_task.cpp  run_task.h  strings_cache.cpp  strings_cache.h  tags_history.cpp  tags_history.h  task.h  text.h
hotkeys/: ctags_hotkeys.lua
src/: exported_calls.def  plugin.cpp  resource.h  resource.rc  tag_info.h  tag_view.cpp  tag_view.h  tags.cpp  tags.h  tags_cache.cpp  tags_cache.h  tags_repository.h  tags_repository_storage.cpp  tags_repository_storage.h  tags_selector.h  tags_selector_impl.cpp  tags_selector_impl.h  tags_sorting_options.h  tags_view.cpp  tags_view.h  tags_viewer.cpp  tags_viewer.h  tagseng.lng  text.h
tests/: CMakeLists.txt  run.bat
tests/composite_task/: main.cpp
tests/execute_process_task/: main.cpp
tests/facade/: CMakeLists.txt
tests/facade/far3/: CMakeLists.txt
tests/facade/far3/break_keys/: main.cpp
tests/plugin/: CMakeLists.txt
tests/plugin/config_data_mapper/: main.cpp
tests/plugin/facade/: CMakeLists.txt
tests/plugin/facade/far3/: CMakeLists.txt
tests/plugin/facade/far3/config_stream_reader/: main.cpp
tests/plugin/facade/far3/config_stream_writer/: main.cpp
tests/plugin/facade/far3/guid/: main.cpp
tests/process/: main.cpp
tests/process/mock_process/: main.cpp
tests/safe_call/: main.cpp
tests/tag_view/: main.cpp
tests/tags/: main.cpp
tests/tags_cache/: main.cpp
tests/tags_name_path_line/: main.cpp
tests/tags_repository_storage/: main.cpp
travis/: build.sh  test.sh
